0.1 Initial release
1.0
- Change net scale from absolute to relative, with option to revert to
  absolute (-nsa --net-scale-absolute).
SVN:
- Improve response time when switching screens.
- Battery status monitoring courtesy of Pieter De Wit